fix some errors & logic

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "history": "^4.10.1",
     "image-webpack-loader": "^6.0.0",
     "next": "^9.4.4",
+    "node-sass": "4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
@@ -153,7 +154,6 @@
     "jest-cli": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-hot-loader": "^1.20.0",
-    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "purgecss-webpack-plugin": "^2.2.0",
