--- a/package.json
+++ b/package.json
@@ -100,7 +100,6 @@
     "history": "^4.10.1",
     "image-webpack-loader": "^6.0.0",
     "next": "^11.1.3",
-    "node-sass": "4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
@@ -160,6 +159,7 @@
     "react-addons-test-utils": "^15.6.2",
     "regenerator-runtime": "^0.13.5",
     "rimraf": "3.0.2",
+    "sass": "^1.49.7",
     "sass-loader": "8.0.2",
     "style-loader": "1.2.1",
     "terser-webpack-plugin": "^3.0.2",
